# docs/swagger.json
@@ -131,6 +131,22 @@
                 }
             }
         },
+        "/api/v1/control/logs/latest": {
+            "get": {
+                "tags": [
+                    "Control"
+                ],
+                "operationId": "GetAllLatestLogs",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/GetAllLatestLogsResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/control/open-door": {
             "post": {
                 "tags": [
@@ -206,6 +222,20 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "GetAllLatestLogsResponse": {
+            "type": "object",
+            "required": [
+                "logs"
+            ],
+            "properties": {
+                "logs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domains.Log"
+                    }
                 }
             }
         },
@@ -314,11 +344,15 @@
         "domains.Log": {
             "type": "object",
             "required": [
+                "created_at",
                 "device_name",
                 "id",
                 "status"
             ],
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
                 "device_name": {
                     "type": "string"
                 },
