# features/control/dto/responses/log.go
@@ -6,6 +6,10 @@ type GetAllLogsResponse struct {
 	Logs []domains.Log `json:"logs"`
 } // @name GetAllLogsResponse
 
+type GetAllLatestLogsResponse struct {
+	Logs []domains.Log `json:"logs"`
+} // @name GetAllLatestLogsResponse
+
 type DeleteAllLogsResponse struct {
 	Message string `json:"message"`
 } // @name DeleteAllLogsResponse
